data/Java/19-access-non-static-method/3/[M]Error.txt
https://stackoverflow.com/questions/19600216/non-static-method-moveint-int-cannot-be-referenced-from-a-static-context
Program.java:15: error: non-static method move(int,int) cannot be referenced from a static context
        move(0,0);
        ^